feat: api - customer management
